Fix side banner not showing and css of applied jobs

--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,54 @@
 
 /* The visual badge */
 .applied-job::after {
-  content: "✅ הגשת מועמדות";
+  color: #00ff11;
+  content: "✅ Applied";
   position: absolute;
+  top: 2em;
+  right: 2em;
+  font-size: 80px;
+  font-weight: bolder;
+  transform: rotate(10deg);
+  /* Place each word on a new line */
+  /* display: inline-block; 
+  max-width: min-content; */
+}
+
+/******************** The extention message that indicates that the extension in working ********************/
+.my-extension-banner {
+  position: fixed;
   top: 10px;
-  left: 10px;
-  background: #4caf50;
+  right: 10px;
+  background-color: rgba(0, 0, 0, 0.85);
   color: white;
-  padding: 5px 10px;
-  font-weight: bold;
-  border-radius: 4px;
+  padding: 10px 15px;
+  border-radius: 8px;
+  font-family: Arial, sans-serif;
   font-size: 14px;
-  z-index: 10;
+  z-index: 999999;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
+}
+
+.my-extension-close {
+  background: transparent;
+  border: none;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: transform 0.2s;
+}
+
+.my-extension-close:hover {
+  background: transparent;
+  border: none;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: bold;
+  transform: scale(1.3);
 }
